Added HW06 and update to lect13

--- a/source/notebooks/lecture13_numpy_operations_and_linalg_fun.ipynb
+++ b/source/notebooks/lecture13_numpy_operations_and_linalg_fun.ipynb
@@ -19,6 +19,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## First, let's discuss the individual project\n",
+    "\n",
+    "Details posted on Canvas and [Github](project_instructions.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## The simplicity of NumPy math\n",
     "\n",
     "As we've discussed, Numpy allows us to perform math with arrays without writing loops, speeding programs and programming. \n",
@@ -28,18 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5 6 7]\n",
-      "[ 0  5 10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -60,18 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5 6 7]\n",
-      "[ 0  5 10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(a + 5)\n",
     "print(a * 5)"
@@ -86,22 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.,  2.,  3.],\n",
-       "       [ 1.,  2.,  3.],\n",
-       "       [ 1.,  2.,  3.]])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "m = np.ones((3, 3))\n",
     "m + a"
@@ -109,20 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 2]\n",
-      "[[5]\n",
-      " [5]\n",
-      " [5]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(a)\n",
     "print(b.reshape((3, 1)))"
@@ -130,22 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[5, 6, 7],\n",
-       "       [5, 6, 7],\n",
-       "       [5, 6, 7]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a + b.reshape((3, 1))"
    ]
@@ -170,28 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x     = [1, 2, 4, 10]\n",
-      "e^x   = [  2.71828183e+00   7.38905610e+00   5.45981500e+01   2.20264658e+04]\n",
-      "2^x   = [    2.     4.    16.  1024.]\n",
-      "3^x   = [    3     9    81 59049]\n",
-      "ln(x)    = [ 0.          0.69314718  1.38629436  2.30258509]\n",
-      "log2(x)  = [ 0.          1.          2.          3.32192809]\n",
-      "log10(x) = [ 0.          0.30103     0.60205999  1.        ]\n",
-      "sum(x)   = 17\n",
-      "min(x)   = 1\n",
-      "max(x)   = 17\n",
-      "mean(x)  = 4.25\n",
-      "std(x)   = 3.49106001094\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = [1, 2, 4, 10]\n",
     "print(\"x     =\", x)\n",
@@ -219,19 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.80112465  0.78693847  0.28087913  0.5076622 ]\n",
-      " [ 0.98987765  0.42932083  0.11248431  0.59235153]\n",
-      " [ 0.92880657  0.59126631  0.69073153         nan]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "m = np.random.random((3, 4))\n",
     "n = np.random.random((4, 3))\n",
@@ -241,44 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.0344498 ,  1.53628788,  0.85610662,  1.44420146],\n",
-       "       [ 1.46308366,  1.4169669 ,  0.12063538,  1.35875076],\n",
-       "       [ 1.30389843,  1.35908355,  1.23925237,         nan]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "m + n.T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.18692253,  0.58969188,  0.1615694 ,  0.47544558],\n",
-       "       [ 0.46841605,  0.42401703,  0.00091687,  0.45397775],\n",
-       "       [ 0.34838778,  0.45398447,  0.37888064,         nan]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "m * n.T"
    ]
@@ -292,42 +191,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "m     = [[ 0.80112465  0.78693847  0.28087913  0.5076622 ]\n",
-      " [ 0.98987765  0.42932083  0.11248431  0.59235153]\n",
-      " [ 0.92880657  0.59126631  0.69073153         nan]]\n",
-      "e^m   = [[ 2.22804529  2.19666098  1.32429353  1.66140263]\n",
-      " [ 2.69090521  1.53621381  1.1190547   1.80823553]\n",
-      " [ 2.53148623  1.80627427  1.99517452         nan]]\n",
-      "2^m   = [[ 1.74245892  1.7254091   1.214935    1.42174448]\n",
-      " [ 1.98601655  1.34659949  1.08108826  1.50770223]\n",
-      " [ 1.90370057  1.50656854  1.61410175         nan]]\n",
-      "3^m   = [[ 2.41120201  2.37391449  1.3614867   1.74669239]\n",
-      " [ 2.96682319  1.6026478   1.13153673  1.91700614]\n",
-      " [ 2.77429959  1.91472198  2.13581038         nan]]\n",
-      "ln(m)    = [[-0.22173873 -0.23960522 -1.26983085 -0.67793901]\n",
-      " [-0.01017393 -0.84555079 -2.18494154 -0.52365503]\n",
-      " [-0.07385477 -0.52548876 -0.37000406         nan]]\n",
-      "log2(m)  = [[-0.31990136 -0.34567726 -1.83197866 -0.97805924]\n",
-      " [-0.01467788 -1.21987194 -3.15220432 -0.75547451]\n",
-      " [-0.10654991 -0.75812002 -0.53380302         nan]]\n",
-      "log10(m) = [[-0.09629991 -0.10405922 -0.55148053 -0.29442517]\n",
-      " [-0.00441848 -0.36721804 -0.94890805 -0.22742049]\n",
-      " [-0.03207472 -0.22821687 -0.16069072         nan]]\n",
-      "sum(m)   = nan\n",
-      "min(m)   = nan\n",
-      "max(m)   = nan\n",
-      "mean(m)  = nan\n",
-      "std(m)   = nan\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"m     =\", m)\n",
     "print(\"e^m   =\", np.exp(m))\n",
@@ -371,21 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sum(m)   = 6.71144316762\n",
-      "min(m)   = 0.112484309743\n",
-      "max(m)   = 0.989877645554\n",
-      "mean(m)  = 0.610131197057\n",
-      "std(m)   = 0.255826773406\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"sum(m)   =\", np.nansum(m))\n",
     "print(\"min(m)   =\", np.nanmin(m))\n",
@@ -515,17 +369,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[10 10]] [[3 6]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = np.array([[10, 10]])\n",
     "b = np.array([[3, 6]])\n",
@@ -534,17 +380,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[7 4]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(a - b)"
    ]
@@ -560,19 +398,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 2]\n",
-      " [3 4]\n",
-      " [5 6]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = np.arange(1, 7).reshape((3, 2))\n",
     "print(c)"
@@ -580,19 +408,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[10 20]\n",
-      " [30 40]\n",
-      " [50 60]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(10 * c)"
    ]
@@ -608,20 +426,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 8 -3]\n",
-      " [ 2  1]]\n",
-      "[[3 1]\n",
-      " [1 2]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "d = np.array([[8, -3], [2, 1]])\n",
     "e = np.array([[3, 1], [1, 2]])\n",
@@ -631,20 +438,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[24 -3]\n",
-      " [ 2  2]]\n",
-      "[[24 -3]\n",
-      " [ 2  2]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(d * e)\n",
     "print(np.multiply(e, d))"
@@ -652,42 +448,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[21,  2],\n",
-       "       [ 7,  4]])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.matmul(d, e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[26, -8],\n",
-       "       [12, -1]])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.matmul(e, d)"
    ]
@@ -717,18 +489,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[2 0]\n",
-      " [0 3]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f = np.array([[2, 0], [0, 3]])\n",
     "print(f)"
@@ -736,21 +499,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 8,  0],\n",
-       "       [ 0, 27]])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.linalg.matrix_power(f, 3)"
    ]
@@ -771,20 +522,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 8 -3]\n",
-      " [ 2  1]]\n",
-      "[[1 0]\n",
-      " [0 1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "eye = np.eye(2, dtype=int)\n",
     "print(d)\n",
@@ -793,42 +533,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 8, -3],\n",
-       "       [ 2,  1]])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.matmul(d, eye)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 8, -3],\n",
-       "       [ 2,  1]])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.matmul(eye, d)"
    ]
@@ -896,18 +612,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.4 -0.2]\n",
-      " [-0.2  0.6]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "g = np.array([[3, 1], [1, 2]])\n",
     "h = np.linalg.inv(g)\n",
@@ -916,21 +623,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.,  0.],\n",
-       "       [ 0.,  1.]])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# checking our work\n",
     "np.matmul(g, h)"
@@ -938,21 +633,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.,  0.],\n",
-       "       [ 0.,  1.]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.matmul(h, g)"
    ]
@@ -990,20 +673,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14.000000000000004"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "k = np.array([[4, 6], [3, 8]])\n",
     "np.linalg.det(k)"
@@ -1018,19 +690,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 6  1  1]\n",
-      " [ 4 -2  5]\n",
-      " [ 2  8  7]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "m = np.array([[6, 1, 1], [4, -2, 5], [2, 8, 7]])\n",
     "print(m)"
@@ -1038,20 +700,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-306.0"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.linalg.det(m)"
    ]
