Small update to lect13

--- a/source/notebooks/lecture13_numpy_operations_and_linalg_fun.ipynb
+++ b/source/notebooks/lecture13_numpy_operations_and_linalg_fun.ipynb
@@ -12,16 +12,26 @@
     "- https://jakevdp.github.io/PythonDataScienceHandbook/02.05-computation-on-arrays-broadcasting.html\n",
     "- [Feature Engineering for Machine Learning](https://search.lib.umich.edu/catalog/record/016260792) \n",
     "- [The Manga Guide to Linear Algebra](https://www.safaribooksonline.com/library/view/the-manga-guide/9781457166730/)\n",
-    "- [Introduction to Linear Algebra by Gilbert Strang](http://math.mit.edu/~gs/linearalgebra/)"
+    "- [Introduction to Linear Algebra by Gilbert Strang](http://math.mit.edu/~gs/linearalgebra/)\n",
+    "- [Advanced Engineering Mathematics by Erwin Kreyszig](https://search.lib.umich.edu/catalog/record/016256884)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## First, let's discuss the individual project\n",
+    "## First, reminder to submit evaluations\n",
     "\n",
-    "Details posted on Canvas and [Github](project_instructions.ipynb)"
+    "You have until midnight tonight! As of Tuesday, 12/27 have completed the quiz I set up to self-report taking it, earning participation points."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Second, let's discuss the individual project\n",
+    "\n",
+    "Details posted on Canvas and [Github](project_instructions.ipynb)."
    ]
   },
   {
@@ -38,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -53,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Broadcasting\n",
+    "### Broadcasting: How NumPy will make compatible arrays\n",
     "\n",
     "We can also perform these operations with a scalar; NumPy will \"broadcast\" it to the correct size for the binary operation. In the case below, it will treat `5` as the ndarray `[5, 5, 5]` while never actually creating such an array."
    ]
@@ -61,47 +73,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(a + 5)\n",
     "print(a * 5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`Broadcasting` can also be done in higher dimensions:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m = np.ones((3, 3))\n",
-    "m + a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(a)\n",
-    "print(b.reshape((3, 1)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a + b.reshape((3, 1))"
    ]
   },
   {
@@ -119,13 +97,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As shown in the visual above, broadcasting can also be done in higher dimensions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "m = np.ones((3, 3))\n",
+    "m + a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print(a)\n",
+    "print(b.reshape((3, 1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a + b.reshape((3, 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### More examples of NumPy's math knowledge"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = [1, 2, 4, 10]\n",
@@ -155,7 +177,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m = np.random.random((3, 4))\n",
@@ -167,7 +191,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m + n.T"
@@ -176,7 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m * n.T"
@@ -192,7 +220,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"m     =\", m)\n",
@@ -238,7 +268,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"sum(m)   =\", np.nansum(m))\n",
@@ -370,7 +402,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = np.array([[10, 10]])\n",
@@ -381,7 +415,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(a - b)"
@@ -399,7 +435,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c = np.arange(1, 7).reshape((3, 2))\n",
@@ -409,7 +447,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(10 * c)"
@@ -421,13 +461,22 @@
    "source": [
     "### Matrix Multiplication\n",
     "\n",
-    "![Matrices](images/lect13_matrix9.png)"
+    "![Matrices](images/lect13_matrix9alt.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Matrices](images/lect13_matrix10.png)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "d = np.array([[8, -3], [2, 1]])\n",
@@ -439,7 +488,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(d * e)\n",
@@ -449,7 +500,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.matmul(d, e)"
@@ -458,7 +511,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.matmul(e, d)"
@@ -468,7 +523,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Matrices](images/lect13_matrix10.png)"
+    "#### Cautions\n",
+    "\n",
+    "1. In general $ \\mathbf{AB} \\neq \\mathbf{AB}$\n",
+    "1. $\\mathbf{AB} = 0 $ does not necessarily imply that $\\mathbf{A} = 0 $ or $\\mathbf{B} = 0 $ or $\\mathbf{BA} = 0 $\n",
+    "1. $\\mathbf{AC} = \\mathbf{AD} $ does not necessarily imply that $\\mathbf{C} = \\mathbf{D} $, even when $\\mathbf{A} \\neq 0 $\n",
+    "\n",
+    "(more about this later)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "f = np.array([[1, 1], [2, 2]])\n",
+    "g = np.array([[-1, 1], [1, -1]])\n",
+    "print(f)\n",
+    "print(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.matmul(f, g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.matmul(g, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "h = np.array([[2, 1], [2, 2]])\n",
+    "k = np.array([[3, 0], [1, 3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print(np.matmul(f, h))\n",
+    "print(np.matmul(f, k))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Multiplication properties of numbers that do hold true for matrices\n",
+    "\n",
+    "1. $\\mathbf{A}(\\mathbf{BC}) = (\\mathbf{AB})\\mathbf{C} = \\mathbf{ABC}$\n",
+    "1. $k\\mathbf{AB} = \\mathbf{A}k\\mathbf{B}$\n",
+    "1. $(\\mathbf{A} + \\mathbf{B})\\mathbf{C} = \\mathbf{AC} + \\mathbf{BC}$\n",
+    "1. $\\mathbf{C}(\\mathbf{A} + \\mathbf{B}) = \\mathbf{CA} + \\mathbf{CB}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inner product of vectors\n",
+    "\n",
+    "When an $m\\times 1$ matrix (aka a row vector) is multiplied by a $ 1 \\times m$ matrix (aka a column vector), we get a $1 \\times 1$ product, called the *inner product* or *dot product*, denoted $\\mathbf{a} \\bullet \\mathbf{b}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.dot([4, -1, 5], [2, 5, 8])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Every entry of $\\mathbf{C} =\\mathbf{AB}$ is an inner product (dot product):\n",
+    "$$c_{jk} = \\mathbf{a}_j \\bullet \\mathbf{b}_k = (j\\text{th row of }\\mathbf{A}) \\bullet (k\\text{th column of }\\mathbf{B})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The power of matrix multiplication is in linear transformations. That topic will come after we finish matrices and talk about vectors."
    ]
   },
   {
@@ -477,7 +645,31 @@
    "source": [
     "### Special Matrices\n",
     "\n",
+    "An $n \\times n$ matrix is called a square matrix. All others are rectangular matrices.\n",
+    "\n",
     "![Matrices](images/lect13_matrix11.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We already covered 1 and 2. An interesting tidbit: the transpose of a product equals the product of the transposed factors, taken in reverse order:\n",
+    "$$(\\mathbf{A} \\mathbf{B})^T = \\mathbf{B}^T \\mathbf{A}^T $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Would you wager a guess as to what a symmetric matrix is? A skew-symmetric matrix? What property must they have?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How about upper and lower triangular matrices?"
    ]
   },
   {
@@ -490,7 +682,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f = np.array([[2, 0], [0, 3]])\n",
@@ -500,7 +694,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.linalg.matrix_power(f, 3)"
@@ -523,7 +719,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "eye = np.eye(2, dtype=int)\n",
@@ -534,7 +732,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.matmul(d, eye)"
@@ -543,7 +743,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.matmul(eye, d)"
@@ -604,6 +806,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Note:* the example above has one solution. Singular cases (definition below) have none or infinite solutions.\n",
+    "\n",
+    "![Matrices](images/lect13_singular.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now, using Gaussian elimination (e.g. the sweeping method) find, the inverse matrix of \n",
     "$ \\left( \\begin{array}{ccc}\n",
     "3 & 1 \\\\\n",
@@ -613,7 +824,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "g = np.array([[3, 1], [1, 2]])\n",
@@ -624,7 +837,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# checking our work\n",
@@ -634,7 +849,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.matmul(h, g)"
@@ -665,6 +882,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If **A** has an inverse, than **A** is a *nonsingular matrix*. Similarly, if **A** has no inverse, then **A** is called a *singular matrix*.\n",
+    "\n",
+    "If **A** has an inverse, the inverse is unique."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Calculating determinants\n",
     "\n",
     "From: https://www.mathsisfun.com/algebra/matrix-determinant.html\n",
@@ -674,7 +900,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "k = np.array([[4, 6], [3, 8]])\n",
@@ -691,7 +919,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m = np.array([[6, 1, 1], [4, -2, 5], [2, 8, 7]])\n",
@@ -701,7 +931,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.linalg.det(m)"
@@ -718,7 +950,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Next up: Vectors!"
+    "#### Fun fact about determinants:\n",
+    "\n",
+    "For any $n \\times n$ matrices **A** and **B**, det(**AB**) = det(**BA**) = det(**A**) det(**B**)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next up: Vectors and Linear Transformations!"
    ]
   }
  ],
